Adding Mixed, Young, Predicted base time and Predicted pause time parsers and their tests
* add concurrentMark feature and refactor total Pause time to Evacuation pause time

* solving review issues

* revision

* adding young,mix and Max pause time features

* requested changes update